--- a/.travis.yml
+++ b/.travis.yml
@@ -5,15 +5,27 @@ addons:
   apt:
     packages:
     - libboost-test-dev
+    - doxygen
+    - graphviz
 script:
 - cmake .
 - cmake --build .
 - cmake --build . --target test
 - cmake --build . --target package
+- mkdir out
+- mkdir doc
+- doxygen
 deploy:
-  provider: script
-  skip_cleanup: true
-  on:
+  - provider: script
+    skip_cleanup: true
+    on:
       branch: main
-  script:
-  - curl -T task06-0.0.$TRAVIS_BUILD_NUMBER-Linux.deb -ucheshirskiy-kot-courses:$BINTRAY_API_KEY "https://api.bintray.com/content/cheshirskiy-kot-courses/cpp_course01/homework/$TRAVIS_BUILD_NUMBER/task06-0.0.$TRAVIS_BUILD_NUMBER-Linux.deb;deb_distribution=focal;deb_component=main;deb_architecture=amd64;publish=1"
+    script:
+    - curl -T task06-0.0.$TRAVIS_BUILD_NUMBER-Linux.deb -ucheshirskiy-kot-courses:$BINTRAY_API_KEY "https://api.bintray.com/content/cheshirskiy-kot-courses/cpp_course01/homework/$TRAVIS_BUILD_NUMBER/task06-0.0.$TRAVIS_BUILD_NUMBER-Linux.deb;deb_distribution=focal;deb_component=main;deb_architecture=amd64;publish=1"
+  - provider: pages
+    skip_cleanup: true
+    on:
+      branch: main
+    github_token: $GITHUB_TOKEN
+    keep_history: true
+    local_dir: out/doc/html/
